# cocos-engine

./: cc.config.json  package-lock.json  package.json
cocos/2d/components/: rich-text.ts
cocos/2d/framework/: ui-renderer.ts
cocos/dragon-bones/: ArmatureDisplay.ts
cocos/gfx/base/: framebuffer.ts
cocos/rendering/custom/: executor.ts  web-pipeline-types.ts
cocos/spine/: skeleton-data.ts  skeleton.ts
cocos/spine/lib/: spine-core.js  spine-define.ts
cocos/ui/: scroll-view.ts
editor/i18n/en/: localization.js
editor/i18n/en/modules/: ui.js
editor/i18n/zh/: assets.js  localization.js
editor/i18n/zh/modules/: ui.js
editor/inspector/components/: label.js  rich-text.js
editor/inspector/contributions/: node.css  node.js
editor/inspector/utils/: prop.js
native/: external-config.json
native/cocos/editor-support/spine-wasm/: CMakeLists.txt  library_spine.js  library_spine_externs.js  spine-skeleton-instance.h  spine-type-export.cpp
native/cocos/editor-support/spine-wasm/scripts/: CMakeLists.header.txt  generate_compile_commands_emscripten.sh
pal/screen-adapter/web/: screen-adapter.ts
pal/system-info/enum-type/: platform.ts
pal/system-info/minigame/: system-info.ts
scripts/build-engine/: package-lock.json
templates/web-desktop/: index.ejs
